# crm_pro

./: .bash_history  .bashrc  .gitconfig  .gitignore  .lesshst  .mariadb_history  .python_history  .viminfo  .yarnrc  README.md  pwd.py  pyproject.toml  ratelimit_refs.txt  run_ws_directly.py
crm_pro/: ai.py  (+12 more)
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/: pyproject.toml
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/crm_pro/: __init__.py  ai.py  api.py  hooks.py  install.py  jobs.py  meta.py
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/crm_pro/doctype/crm_activity/: __init__.py  crm_activity.py
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/crm_pro/doctype/crm_attachment/: __init__.py  crm_attachment.json  crm_attachment.py
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/crm_pro/doctype/crm_audit_log/: __init__.py  crm_audit_log.json  crm_audit_log.py
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/crm_pro/doctype/crm_call_log/: __init__.py  crm_call_log.json  crm_call_log.py
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/crm_pro/doctype/crm_company/: __init__.py  crm_company.py
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/crm_pro/tests/: __init__.py  test_crm_pro.py
leadcrm_import/Leadscrm/Leadscrm/Leads/crm_pro/docker/: Dockerfile  docker-compose.yml  nginx.conf  redis.conf
leadcrm_import/Leadscrm/Leadscrm/Leads/leads_crm/: pyproject.toml
leadcrm_import/Leadscrm/Leadscrm/Leads/leads_crm/leads_crm/: __init__.py  hooks.py
leadcrm_import/Leadscrm/Leadscrm/Leads/leads_crm/leads_crm/doctype/: __init__.py
leadcrm_import/Leadscrm/Leadscrm/Leads/precision_crm/: .env.example  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  license.txt  nginx.conf  pyproject.toml  setup.py  supervisor.conf
leadcrm_import/Leadscrm/Leadscrm/Leads/precision_crm/precision_crm/: __init__.py  auth.py  automation.py  hooks.py  install.py  modules.txt  permissions.py  scheduler.py  utils.py  validators.py
leadcrm_import/Leadscrm/Leadscrm/Leads/precision_crm/precision_crm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
leadcrm_import/Leadscrm/Leadscrm/Leads/precision_crm/precision_crm/api/: analytics.py  companies.py  contacts.py  deals.py  leads.py  opportunities.py  tasks.py
leadcrm_import/Leadscrm/Leadscrm/Leads/precision_crm/precision_crm/integrations/: facebook_service.py  facebook_webhook.py  whatsapp_service.py  whatsapp_webhook.py
(+521 files in other folders)
